[project]
name = "sahmk-mcp"
version = "0.2.3"
description = "Official MCP server for Sahmk — use Saudi market data inside AI agents like Cursor and Claude."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sahmk" }]
keywords = ["mcp", "sahmk", "saudi-arabia", "stocks", "tadawul", "market-data", "ai-agents", "cursor", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sahmk>=0.7.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
sahmk-mcp = "sahmk_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
